// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stepper > handles clicks when interactive 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles_inactive__t28su8y styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > handles clicks when interactive and small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles_inactive__t28su8y styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_small__vfqe6pc styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > handles clicks when not interactive 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_small__vfqe6pc styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with all selected 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with animation 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_animated_true__t28su8i styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_animated_true__t28su8i styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_medium__t28su8v styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_animated_true__t28su8i styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_animated_true__t28su8i styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
        Children
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_animated_true__t28su8i styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_medium__t28su8v styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_animated_true__t28su8i styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with disabled steps 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_true__t28su8k styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_true__t28su812 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          1
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_true__t28su81a styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_true__t28su8k styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_true__t28su812 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_true__t28su81a styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with selected prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_medium__t28su8p styles_undefined_compound_1__t28su8s styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_small__vfqe6pc styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 styles_addMarginTop_true__t28su818 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with step number in row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_right__t28su85 styles_separator_true__t28su87 styles_undefined_compound_1__t28su89"
    >
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="styles__t28su8a styles_temporal_done__t28su8d"
        data-size="medium"
      />
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="styles__t28su8a styles_temporal_current__t28su8c"
        data-size="medium"
      />
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without Stepper.Step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_true__t28su87 styles_undefined_compound_0__t28su88"
    >
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_done_true__t28su8l styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles_undefined_compound_3__t28su8u styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_small__vfqe6pc styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        Step 1
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        Step 2
      </div>
      <div
        class="step styles__t28su8g styles__t28su8h styles_disabled_false__t28su8j styles_labelPosition_bottom__t28su8m styles_separator_true__t28su8o styles_size_small__t28su8q styles_undefined_compound_0__t28su8r styles_undefined_compound_2__t28su8t styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_small__t28su815 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_small__vfqe6pc styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without separator 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_bottom__t28su84 styles_separator_false__t28su86"
    >
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without separator with label on the right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__t28su83 styles_labelPosition_right__t28su85 styles_separator_false__t28su86"
    >
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_0__vfqe6pf"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_isActive_true__t28su813 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_7__vfqe6pm"
        >
          2
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__t28su8g styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p styles_justifyContent_flex-start_xxsmall__xf61n46j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__t28su810 styles__t28su8z styles_disabled_false__t28su811 styles_size_medium__t28su814 styles__vfqe6p0 styles_prominence_strong__vfqe6p3 styles_size_medium__vfqe6pb styles_undefined_compound_9__vfqe6po"
        >
          3
        </div>
        <span
          class="styles__t28su817 styles__t28su816 styles_disabled_false__t28su819 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          style="--whiteSpace__1giziax1: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
